[package]
name = "tinypaint"
version = "0.1.0"
edition = "2021"
description = "reserved"
license = "Apache-2.0"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
log = "0.4.20"
lyon = "1.0.1"
wgpu = "0.18.0"
winit = "0.28.7"

[dev-dependencies]
pollster = { version = "0.3.0", features = ["macro"] }
