[package]
name = "tinypaint"
version = "0.1.0"
edition = "2021"
description = "reserved"
license = "Apache-2.0"
resolver = "2"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
log = "0.4.20"
lyon = "1.0.1"
wgpu = "25.0.0"
winit = "0.29.15"
thiserror = "1.0.56"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
